Fix alignment of logo in a heading

--- a/static/sass/custom/_inline-ubuntu-logo.scss
+++ b/static/sass/custom/_inline-ubuntu-logo.scss
@@ -9,9 +9,8 @@
   display: inline-block;
   height: 1em;
   margin-left: 0.1em;
-  margin-top: -.25rem;
   text-indent: -99999px;
   width: 150px;
   position: relative;
-  top: -.15rem;
+  top: .2rem;
 }
